feat: dockerize PostgreSQL database - Add the database's related environment variables. - Install PostgreSQL driver dependencies. - Use a shell script as the entry point in the product's API to wait for the database service to be ready. - Include in the docker-compose.yaml file, a service for the PostgreSQL database.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,17 @@ services:
       - 8009:8000
     env_file:
       - ./app/.env.dev
+    depends_on:
+      - products-db
+
+  products-db:
+    image: postgres:15
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=products
+      - POSTGRES_PASSWORD=products
+      - POSTGRES_DB=products_dev
+
+volumes:
+  postgres_data:
