--- a/app/.env.dev
+++ b/app/.env.dev
@@ -1,3 +1,10 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost, 127.0.0.1, 0.0.0.0, [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=products_dev
+SQL_USER=products
+SQL_PASSWORD=products
+SQL_HOST=products-db
+SQL_PORT=5432
+DATABASE=postgres
