--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.6.0
 Django==4.2.1
+django-js-asset==2.0.0
+django-mptt==0.14.0
 djangorestframework==3.14.0
 psycopg2-binary==2.9.6
+pycountry==22.3.5
 python-decouple==3.8
 pytz==2023.3
 sqlparse==0.4.4
